# emnet

./: README.md  data  debug_submit.sh  main.py  nersc_submit.sh  pyproject.toml
conf/: config.yaml
conf/dataset/: default.yaml  smallgrid.yaml
conf/model/: default.yaml
conf/model/backbone/: default.yaml
conf/model/criterion/: default.yaml  posonly.yaml
conf/model/denoising/: default.yaml
conf/model/transformer/: 100queries.yaml  100querieswider.yaml  default.yaml
conf/system/: default.yaml  slurm.yaml
conf/training/: default.yaml
emnet/: dataclasses.py
emnet/config/: backbone.py  criterion.py  system.py
emnet/geant/: dataclasses.py  dataset.py  io.py
emnet/geant/incidence_predictor/: __init__.py  eval.py  modules.py  training.py
emnet/io/: __init__.py
emnet/networks/: denoising_generator.py  me_salience_mask_predictor.py  me_value_encoder.py  model.py  occupancy.py  query_generator.py  salience_mask_predictor.py  segmentation_map.py
emnet/networks/backbone/: unet.py
emnet/networks/loss/: criterion.py  detection_ap.py  loss_calculator.py  matcher.py  metrics.py  salience_criterion.py  utils.py
emnet/networks/positional_encoding/: __init__.py  tabular.py
emnet/networks/transformer/: classification_head.py  decoder.py  encoder.py  model.py  position_head.py  std_dev_head.py
emnet/preprocessing/: sparsify.py
emnet/stable_dist/: module.py
emnet/utils/: __init__.py  memory_utils.py  misc_utils.py  window_utils.py
emnet/visualization/: pixel_patch.py  utils.py
emsim/: dataclasses.py  emnet.py  emsim_utils.py  train_multigpu.py  training.py
emsim/config/: dataset.py  denoising.py  model.py  registry.py  training.py  transformer.py
emsim/geant/: __init__.py
emsim/io/: ncemhub_dataset.py  realimages.py
emsim/multiscale/: dataclasses.py  dataset.py  io.py  utils.py
emsim/networks/: denoising_generator.py  me_value_encoder.py  model.py  occupancy.py  prediction_head.py  query_generator.py  salience_mask_predictor.py  segmentation_map.py  value_encoder.py
emsim/networks/backbone_me/: unet.py
emsim/preprocessing/: __init__.py  sparsify.py
emsim/stable_dist/: __init__.py
emsim/unet/: unet_model.py  unet_parts.py
emsim/utils/: __init__.py  misc_utils.py
tests/networks/: conftest.py
(+75 files in other folders)
